opam-version: "1.2"
maintainer: "Marshall Roch <mroch@fb.com>"
authors: ["Marshall Roch <mroch@fb.com>"]
homepage: "https://github.com/flowtype/ocaml-ppx_gen_rec"
doc: "https://github.com/flowtype/ocaml-ppx_gen_rec"
license: "MIT"
dev-repo: "https://github.com/flowtype/ocaml-ppx_gen_rec.git"
bug-reports: "https://github.com/flowtype/ocaml-ppx_gen_rec/issues"
depends:
[
  "dune" {build}
  "ocaml-migrate-parsetree"
]
build: [["dune" "build" "-p" name "-j" jobs]]
